  Bugfix: No menu icons was shown on Windows x64 (#3070151)
  Bugfix: Crash when pasting from clipboard (#3109525)
  Bugfix: Keeps verifing path even turned off in options (#3111581)
  Bugfix: Crash after deleting text (#3109521)
  Bugfix: "+" and "-" from the number block don't work in the editor (#3306182)
  Bugfix: Date format did not respect Regional Settings (#3175189)
  Translation updates:
  - Bulgarian (#3082392)
  - Hungarian (#3164982)

WinMerge 2.13.14 - 2010-09-15 (r7263)
  Update release compiler and runtimes to VS2008
  Remove ANSI binaries from distribution
  Drop support for W95, W98, WME and NT4
  Update to PCRE 8.10 (r7210)
  Update SCEW to 1.1.2 (r7212)
  In-line difference highlighting improvement (#3022014)
  Make comment filtering work for folder compare (#3046938)
  Recognize .ascx files as ASP files (#3042393)
  Comment filtering improvement (#3034083)
  Allow giving encoding name as custom codepage (#2813825, #3010934)
  Installer: Drop Windows 9x/ME/NT4 support from InnoSetup (#3025078)
  Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
    in status bar (#3025855)
  Bugfix: Options dialog didn't update when importing settings
    from .ini file. (#2794137)
  Bugfix: New fix for the bug #2210403 (#2929005)
  Bugfix: Take changed compareoptions into use in folder compare (#3046938)
  Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
  Bugfix: Location pane focus enabled "Save" (#3022292)
  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
    Microsoft Security Advisory (2269637)  (#33056008)
  Bugfix: Fix crash with long paths (#3056974)
  Translation updates:
  - Chinese (#3033324)
  - French (#3025202)

WinMerge 2.13.13 - 2010-06-19 (r7205)
  Improve editing of linefilter regular expressions (#3015416)
  Installer: Embed MS runtime files installer for x64 (r7150)
  Installer: Set default language with MSI setup (#3014912)