@@ -15,6 +15,8 @@ WinMerge 2.15.1
   Bugfix: Crash after deleting text (#3109521)
   Bugfix: "+" and "-" from the number block don't work in the editor (#3306182)
   Bugfix: Date format did not respect Regional Settings (#3175189)
+  Bugfix: When selecting multiple files in Patch Generator dialog,
+    "Swap" button led to an error.  (#3043635, #3066200)
   Translation updates:
   - Bulgarian (#3082392)
   - Hungarian (#3164982)
